style.css
@font-face {
    font-family: 'Marker';
    src: url('./fonts/marker/MarkerRegularRegular.woff2') format('woff2'),
        url('./fonts/marker/MarkerRegularRegular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: 'The Vintage';
    src: url('./fonts/author/TheVintageRegular.woff2') format('woff2'),
        url('./fonts/author/TheVintageRegular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
} 
*, *::before, *::after {
    box-sizing: border-box; 
}
.container {
    display: grid;
    height: 100vh;
    grid-template-rows: auto 1fr;
}
.header-container {
    grid-row: 1 / 2;
    background-image: url(./images/wall.jpg);
    background-size: cover;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
}
.cardboard {
    padding: 40px;
    background-image: url(./images/cardboard.png);
    background-size: cover;
    background-repeat: no-repeat;
    grid-column: 2 / 3;
    display: flex;
    justify-content: center;
}
h1 {
    margin: 0;
    font-family: "Marker", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 1.6rem;
}
.add {
    margin-right: 30px;
    grid-column: 3 / 4;
    justify-self: end;
    align-self: center;
    padding: 10px;
    background-color: #333333;
    color: white;
    font-weight: 600;
    border: solid 2px black;
    border-radius: 13px;
}
.add:active {
    background-color: green;
}
.shelf-container {
    grid-row: 2 / 3;
    background-image: url(./images/background.png);
    background-size: cover;
    background-repeat: no-repeat;
    padding-top: 60px;
    display: grid;
    grid-template: 1fr 1fr / 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
}
.cover {
    justify-self: center;
    align-self: center;
    display: flex;
    width: 150px;
    height: 220px;
    max-height: 200px; 
    overflow: hidden;
}
.card {
    background-color: cornsilk;
    border-radius: 0px 10px 10px 0px;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.titleCard {
    margin: 0;
    align-self: center;
    font-size: 1.3rem;
    margin-bottom: 40px;
}
.spine p, .card p:not(.status, .author) {
    font-family: sans-serif,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .author, .pages {
    font-size: 0.8rem;
 }
.author {
    margin: 0;
     font-family: 'The Vintage' , system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     align-self: center;
     border-bottom: solid 1px gray;
     height: 25px;
     width: 110px;
     margin-bottom: px;
}
.pages {
    margin: 0;
    align-self: end;
    margin: 0px 10px 5px 0px;
}
.spine {
    background-color: brown;
    writing-mode: sideways-lr;
    height: auto;
    width: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 3px 0px 0px 3px;
}
.titleSpine {
    margin: 0;
    font-size: 0.7rem;
    color: white;
}
.ribbon {
    background-color: grey;
    padding: 3px;
    height: 35px;
    border-radius: 0px 0px 4px 4px;
    align-self: end;
    writing-mode: sideways-rl;
    margin-right: 20px;
}
.status {
    margin: 0;
    font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
    font-size: 0.6rem;
    font-weight: bold;
    text-align: center;
    color: white;
}
.dialog {
    border: none;
    border-radius: 12px;
    box-shadow: 0px 0px 10px 1px lightgray;
    height: 200px;
    width: 360px;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.dialog > p {
    margin: 0;
    margin-bottom: 10px;
}
form {
    width: 320px;
    display: flex;
    flex-direction: column;
    }
form div {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 10px;
}
#status {
    margin-right: 85px;
}
form input {
    border: 1px solid black;
    border-radius: 6px;
}
.addBtn {
    display: flex;
    justify-content: center;
}
#addBtn {
    border: 1px solid black;
    background-color: #333333;
    color: white;
    font-weight: 700;
    border-radius: 10px;
    padding: 5px 20px;
}
#addBtn:active {
    background-color: green;
}

